--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Typed.js</title>
      <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
      <div class="contenedor">
           <header>
-               <a href="#" class="">
+               <a href="#" class="logo">
                          <img src="./img/logo.png" alt="" style="width: 100px;">
                </a>
                <nav class="menu">
-                    <a href="#">Inicio</a>
-                    <a href="#">Nosotros</a>
-                    <a href="#">Contacto</a>
+                    <a href="#"><img class="icon" src="./img/facebook.png" alt=""></a>
+                    <a href="#"><img class="icon" src="./img/instagram.png" alt=""></a>
+                    <a href="#"><img class="icon" src="./img/youtube.png" alt=""></a>
                </nav>
           </header>
 
@@ -35,6 +36,11 @@
                </div>
           </main>
      </div>
+
+     
+     <a href="" class="float" target="_blank">
+     <i class="fa fa-whatsapp my-float"></i>
+     </a>
 
 	 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
      <script src="./js/main.js"></script>
